--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -664,6 +664,7 @@ td.table__form .rules + .form__group:last-of-type {
 
         .select2-search__field {
             min-height: auto;
+            height: 33px;
         }
 
         .select2-selection--multiple {
