Lexicon view changes to aid focus style testing

--- a/views/lexicon/forms/text.html.twig
+++ b/views/lexicon/forms/text.html.twig
@@ -242,7 +242,8 @@
             'id': 'text-16',
             'label': '"class": "has-changed"',
             'class': 'has-changed',
-            'help': 'Highlight whether an action elsewhere affects an input'
+            'help': 'Highlight whether an action elsewhere affects an input',
+            'placeholder': 'Placeholder',
         })
     }}
     {{
@@ -250,7 +251,8 @@
             'id': 'text-17',
             'label': '"class": "has-success"',
             'class': 'has-success',
-            'help': 'Something good happened'
+            'help': 'Something good happened',
+            'placeholder': 'Placeholder'
         })
     }}
 
@@ -259,7 +261,8 @@
             'id': 'text-18',
             'label': '"class": "has-warning"',
             'class': 'has-warning',
-            'help': 'Something bad happened'
+            'help': 'Something bad happened',
+            'placeholder': 'Placeholder'
         })
     }}
     {{
@@ -267,7 +270,8 @@
             'id': 'text-19',
             'label': '"class": "has-error"',
             'class': 'has-error',
-            'help': 'Automatically added if using <code>error</code> option'
+            'help': 'Automatically added if using <code>error</code> option',
+            'placeholder': 'Placeholder'
         })
     }}
     {{
@@ -275,7 +279,8 @@
             'id': 'text-20',
             'label': '"disabled": true',
             'disabled': true,
-            'help': 'Stop! Can’t touch this'
+            'help': 'Stop! Can’t touch this',
+            'placeholder': 'Placeholder'
         })
     }}
 
