--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -115,7 +115,8 @@
         {{
             html.button({
                 label: 'Default',
-                type: 'link'
+                type: 'link',
+                href: '#'
             })
         }}
 
@@ -124,7 +125,8 @@
             html.button({
                 label: 'Primary',
                 class: 'btn--primary',
-                type: 'link'
+                type: 'link',
+                href: '#'
             })
         }}
 
@@ -133,7 +135,8 @@
             html.button({
                 label: 'Success',
                 class: 'btn--success',
-                type: 'link'
+                type: 'link',
+                href: '#'
             })
         }}
 
@@ -142,7 +145,8 @@
             html.button({
                 label: 'Danger',
                 class: 'btn--danger',
-                type: 'link'
+                type: 'link',
+                href: '#'
             })
         }}
 
@@ -151,7 +155,8 @@
             html.button({
                 label: 'Warning',
                 class: 'btn--warning',
-                type: 'link'
+                type: 'link',
+                href: '#'
             })
         }}
 
@@ -160,7 +165,8 @@
             html.button({
                 label: 'Info',
                 class: 'btn--info',
-                type: 'link'
+                type: 'link',
+                href: '#'
             })
         }}
 
@@ -169,7 +175,8 @@
             html.button({
                 label: 'Inverse',
                 class: 'btn--inverse',
-                type: 'link'
+                type: 'link',
+                href: '#'
             })
         }}
 
@@ -177,7 +184,8 @@
             html.button({
                 label: 'Disabled',
                 disabled: true,
-                type: 'link'
+                type: 'link',
+                href: '#'
             })
         }}
 
@@ -185,7 +193,8 @@
             html.button({
                 label: 'Naked',
                 type: 'link',
-                class: 'btn--naked'
+                class: 'btn--naked',
+                href: '#'
             })
         }}
     </div>
