--- a/views/lexicon/tabs/cards.html.twig
+++ b/views/lexicon/tabs/cards.html.twig
@@ -24,13 +24,15 @@
             {{
                 html.link({
                     'label': 'Card link',
-                    'class': 'card-link'
+                    'class': 'card-link',
+                    'href': '#'
                 })
             }}
             {{
                 html.link({
                     'label': 'Card link',
-                    'class': 'card-link'
+                    'class': 'card-link',
+                    'href': '#'
                 })
             }}
         </div>
