new link and skip to content focus styles

--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -46,8 +46,7 @@ a {
   }
 
   &:focus {
-    color: color(link, focus);
-    outline: 3px solid color(border, focus);
+    @include pulsar-link-focused;
   }
 }
 
@@ -64,17 +63,16 @@ a.disabled {
   background-color: color(white);
   position: absolute;
   left: -9999px;
-  padding: 0 10px;
+  padding: 10px;
   text-align: left;
   top: -9999px;
-  z-index: $zindex-nav;
+  z-index: $zindex-popover;
 
   &:focus {
     display: block;
     left: 0;
-    outline-offset: -2px;
-    outline: 3px solid color(border, focus);
     position: relative;
+    text-decoration: underline;
     top: 0;
     width: 100%;
   }
