including new focus mixins

--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -42,6 +42,7 @@ $fa-css-prefix: 'icon';
 @import 'mixin.mixins-to-organise';
 @import 'mixin.responsive-utilities';
 @import 'mixin.word-wrap';
+@import 'mixin.focus';
 
 // Config
 @import 'config.variables';
