--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -6,6 +6,15 @@
         border-bottom: 1px dotted color(grey, light);
         color: color(link);
         text-decoration: none;
+
+        &:not(.btn):focus {
+            @include pulsar-link-focused;
+        }
+
+        &:focus {
+            border: 0;
+            color: color(black);
+        }
     }
 
     tbody > tr:hover {
