--- a/stylesheets/_component.colorpicker.scss
+++ b/stylesheets/_component.colorpicker.scss
@@ -2,6 +2,10 @@
     border-bottom-right-radius: $border-radius;
     border-top-right-radius: $border-radius;
     width: 110px;
+
+    &:focus {
+        border-radius: 0;
+    }
 }
 
 .colorpicker .form__control {
