--- a/stylesheets/_component.dropdowns.scss
+++ b/stylesheets/_component.dropdowns.scss
@@ -91,20 +91,24 @@
 // -----------
 .dropdown__menu > li > a:not(.is-disabled) {
   &:hover,
-  &:focus,
   &.active {
     text-decoration: none;
     background-color: $dropdown-link-hover-bg;
     color: $dropdown-link-hover-color;
   }
+
+  &:focus {
+    @include pulsar-dropdown-item-focused;
+  }
+
+
 }
 
 // Active state
 // ------------
 .dropdown__menu > .active > a {
   &,
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: $dropdown-link-active-bg;
     color: $dropdown-link-active-color;
     text-decoration: none;
@@ -212,6 +216,10 @@
       background-color: darken(color(primary), 5%);
     }
 
+    &:focus {
+      @include pulsar-dropdown-item-focused;
+    }
+
     > .badge {
       @extend %badge--primary;
       background-color: darken($badge-primary-bg, 20%);
@@ -224,6 +232,10 @@
 
     &:hover {
       background-color: darken(color(success), 5%);
+    }
+
+    &:focus {
+      @include pulsar-dropdown-item-focused;
     }
 
     > .badge {
@@ -240,6 +252,10 @@
       background-color: darken(color(warning), 5%);
     }
 
+    &:focus {
+      @include pulsar-dropdown-item-focused;
+    }
+
     > .badge {
       @extend %badge--warning;
       background-color: darken($badge-warning-bg, 20%);
@@ -252,6 +268,10 @@
 
     &:hover {
       background-color: darken(color(info), 5%);
+    }
+
+    &:focus {
+      @include pulsar-dropdown-item-focused;
     }
 
     > .badge {
@@ -268,6 +288,10 @@
       background-color: darken(color(danger), 5%);
     }
 
+    &:focus {
+      @include pulsar-dropdown-item-focused;
+    }
+
     > .badge {
       @extend %badge--danger;
       background-color: darken($badge-danger-bg, 20%);
@@ -280,6 +304,10 @@
 
     &:hover {
       background-color: darken(color(inverse), 5%);
+    }
+
+    &:focus {
+      @include pulsar-dropdown-item-focused;
     }
 
     > .badge {
