--- a/stylesheets/_component.flash.scss
+++ b/stylesheets/_component.flash.scss
@@ -42,7 +42,7 @@
         text-decoration: underline;
 
         &:focus {
-            color: color(white);
+            @include pulsar-link-focused;
         }
     }
 }
@@ -62,6 +62,10 @@
             a:visited {
                 color: $state-color-alt;
             }
+
+            a:focus {
+                @include pulsar-link-focused;
+            }
         }
     }
 }
@@ -78,17 +82,25 @@
         float: right;
         font-size: 1em;
         margin-left: $gutter-width / 4;
-        margin-right: -($gutter-width / 2);
+        margin-right: -$gutter-width;
         opacity: .9;
         text-decoration: none;
 
         @include respond-min($screen-phone) {
             margin-left: $gutter-width / 2;
-            margin-right: -$gutter-width;
         }
 
         &:hover {
             opacity: 1;
+        }
+
+        &:focus {
+            @include pulsar-link-focused;
+        }
+
+        i {
+            margin-right: 0;
+            padding: 0 $padding-base;
         }
     }
 }
