--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -102,7 +102,9 @@
 }
 // Close icon
 .modal__header .close {
-    margin-top: -2px;
+    margin-top: -15px;
+    margin-right: -15px;
+    padding: 14px;
 }
 
 // Title text within header
@@ -230,16 +232,20 @@
     .download {
         color: color(gray);
         font-size: 1.4em;
-        padding: 20px;
+        padding: 18px;
         transition: color .1s ease;
 
-        &:hover,
-        &:focus {
+        &:hover {
             color: color(jadu-blue);
+        }
+
+        &:focus {
+            @include pulsar-modal-header-button-focused;
         }
     }
 
     .close {
+        margin-right: 0;
         margin-top: 0;
     }
 
