--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -179,8 +179,6 @@
     margin-top: 5px;
     padding: 8px 14px 6px;
     text-decoration: none;
-    -webkit-transition: all 200ms ease-in;
-    transition: all 200ms ease-in;
 
     @include respond-min($screen-desktop) {
         display: none;
@@ -193,8 +191,7 @@
     }
 
     &:focus {
-        outline: 3px solid color(border, focus);
-        outline-offset: 2px;
+        @include pulsar-outline-button-focused;
     }
 }
 
@@ -216,10 +213,6 @@
 .nav-link {
     color: color(white);
     text-decoration: none;
-
-    &:focus {
-        outline: 3px solid color(border, focus);
-    }
 }
 
 .nav-primary {
@@ -257,18 +250,20 @@
         padding: 16px 5px;
         position: relative;
         text-overflow: ellipsis;
-        transition: background-color 50ms linear, color 50ms linear;
-    }
+        transition: background-color 50ms linear, color 50ms linear, box-shadow 50ms linear, outline 50ms linear;
 
-    .nav-link:hover,
-    .nav-link:focus {
-        background-color: darken($nav-color-dark, 2%);
-        color: color(white);
-    }
+        &:hover {
+            background-color: darken($nav-color-dark, 2%);
+            color: color(white);
+        }
 
-    .nav-link.is-active:hover,
-    .nav-link.is-active:focus {
-        background-color: $nav-color-dark;
+        &:focus {
+            @include pulsar-link-focused;
+
+            .nav-link__icon {
+                color: color(black);
+            }
+        }
     }
 
     .nav-link__icon {
@@ -370,15 +365,20 @@
         border-bottom-left-radius: 8px;
         text-align: left;
 
-        &:hover,
-        &:focus {
+        &:hover {
             background-color: darken($nav-color-dark, 4%);
             color: color(white);
         }
 
+        &:focus {
+            @include pulsar-link-focused;
+        }
+
         &:active {
             background-color: color(white);
+            box-shadow: none;
             color: $nav-color-dark;
+            outline: none;
         }
     }
 }
@@ -445,6 +445,10 @@
     &.is-active {
         background: none;
     }
+
+    &:focus .jadu-logomark {
+        background: url($branding-navigation-focus), linear-gradient(transparent, transparent);
+    }
 }
 
 .nav-search {
@@ -497,11 +501,10 @@
     &:hover i::before,
     &:focus i::before {
         content: '\f0a8';
-        color: color(white);
     }
 
     &:focus {
-        outline: 3px solid color(border, focus);
+        @include pulsar-button-focused;
     }
 
     .nav-secondary.is-open &,
