--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -41,8 +41,7 @@ input.main-search__field {
     }
 
     &:focus {
-        outline: 3px solid color(border, focus);
-        outline-offset: 3px;
+        @include pulsar-input-focused;
     }
 }
 
@@ -54,19 +53,20 @@ input.main-search__field::-ms-clear {
     background: none;
     border: 0;
     color: #555;
-    padding: 0;
+    padding: 1px 8px 0;
     position: absolute;
-    right: 10px;
-    top: 5px;
+    right: 0;
+    top: 3px;
     z-index: 3;
 
     @include respond-min($screen-tablet) {
-        left: 155px;
+        left: 149px; // magic number to accommodate focus style
         right: auto;
     }
 
     &:focus {
-        outline: 3px solid color(border, focus);
+        @include pulsar-link-focused;
+        border-top-right-radius: $border-radius;
     }
 }
 
