--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -332,10 +332,7 @@
 }
 
 .select2-container--default.select2-container--focus .select2-selection--multiple {
-    border: 1px solid color(black);
-    box-shadow: 0 0 0 1px color(black);
-    outline: 3px solid color(border, focus);
-    outline-offset: 2px;
+    @include pulsar-input-focused;
 }
 
 .select2-container--default.select2-container--disabled .select2-selection--multiple {
@@ -452,10 +449,7 @@
 }
 
 .select2-container--classic .select2-selection--single:focus {
-    border: 1px solid color(black);
-    box-shadow: 0 0 0 1px color(black);
-    outline: 3px solid color(border, focus);
-    outline-offset: 2px;
+    @include pulsar-input-focused;
 }
 
 .select2-container--classic .select2-selection--single .select2-selection__rendered {
@@ -564,10 +558,7 @@
 }
 
 .select2-container--classic .select2-selection--multiple:focus {
-    border: 1px solid color(black);
-    box-shadow: 0 0 0 1px color(black);
-    outline: 3px solid color(border, focus);
-    outline-offset: 2px;
+    @include pulsar-input-focused;
 }
 
 .select2-container--classic .select2-selection--multiple .select2-selection__rendered {
@@ -725,9 +716,6 @@ span.select2-selection.select2-selection--single {
 .select2-container--default.select2-container--open .select2-selection--single,
 .select2-container--default.select2-container--focus .select2-selection--single,
 .select2-container--default.select2-container--focus:focus .select2-selection--single {
-    border: 1px solid color(black);
-    box-shadow: 0 0 0 1px color(black);
-    outline: 3px solid color(border, focus);
-    outline-offset: 2px;
+    @include pulsar-input-focused;
 }
 // scss-lint:enable all
