--- a/stylesheets/_config.theme.scss
+++ b/stylesheets/_config.theme.scss
@@ -105,7 +105,7 @@ $input-bg:                            #fff !default;
 $input-bg-disabled:                   color(gray, lightest) !default;
 $input-border:                        color(border) !default;
 $input-border-focus:                  #66afe9 !default;
-$input-color-placeholder:             color(gray, light) !default;
+$input-color-placeholder:             color(text, placeholder) !default;
 $legend-border-color:                 color(border) !default;
 $input-group-addon-border-color:      $input-border !default;
 
