Fixed breadcrumb focus colour

--- a/stylesheets/_component.breadcrumb.scss
+++ b/stylesheets/_component.breadcrumb.scss
@@ -4,5 +4,9 @@
 
     a {
         color: color(gray, dark); // must be AA 4.5:1
+
+        &:focus {
+            color: color(black);
+        }
     }
 }
