--- a/stylesheets/_component.table-detail.scss
+++ b/stylesheets/_component.table-detail.scss
@@ -55,8 +55,9 @@
     padding: $modal-title-padding;
 }
 
-.table-detail__header-close {
-    margin-top: -2px;
+.table-detail__header-close.table-detail__header-close {
+    margin: -15px -15px 0 0;
+    padding: 15px 15px 14px;
 }
 
 .table-detail__title {
