Updated inline nav focus style to prevent lose of black underline

--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -97,6 +97,10 @@
             }
         }
 
+        &:focus {
+            @include pulsar-inline-nav-link-focused;
+        }
+
         &.is-disabled {
             color: color(text, disabled);
         }
