--- a/stylesheets/_mixin.focus.scss
+++ b/stylesheets/_mixin.focus.scss
@@ -2,7 +2,6 @@
     background-color: color(background, focus);
     box-shadow: 0 -2px color(background, focus), 0 4px color(black);
     color: color(black);
-    //outline: 3px solid transparent;
     outline: none;
     text-decoration: none;
 }
@@ -104,4 +103,12 @@
     box-shadow: inset 0 -2px 0 color(black);
     color: color(black) !important;
     outline: none;
+}
+
+@mixin pulsar-inline-nav-link-focused {
+    background-color: color(background, focus);
+    box-shadow: 0 -2px color(background, focus), inset 0 -4px color(black);
+    color: color(black);
+    outline: none;
+    text-decoration: none;
 }
