Update js to programattically disable links containing the `is-disabled` class

--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -29,7 +29,10 @@
     })
 }}
         
+    <h2 class="heading">Links</h2>
 
+    <a href="#one">Normal</a>
+    <a href="#two" class="is-disabled">disabled</a>
 
     <h2 class="heading">Button variations</h2>
 
