--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -33,6 +33,12 @@
 
     <a href="#one">Normal</a>
     <a href="#two" class="is-disabled">disabled</a>
+    {{
+        html.link({
+            'label': 'twig link',
+            'disabled': true
+        })
+    }}
 
     <h2 class="heading">Button variations</h2>
 
