--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -3,7 +3,7 @@
     {% import _self as nav %}
     {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 
-<nav class="nav-main" aria-label="Primary" id="aria-main-nav">
+<nav role="navigation" class="nav-main" aria-label="primary" id="aria-main-nav">
     <div class="nav-primary t-nav-primary">
         <a tabindex="1" href="{{ options.brand_link|default('#') }}" class="jadu-branding" aria-label="Home">
             <span class="jadu-logomark"><span class="hide">Return to home</span></span>
@@ -148,7 +148,7 @@
 {%- macro breadcrumbs(items) -%}
     {% spaceless %}    
     {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
-    <nav class="breadcrumb" aria-label="breadcrumbs">
+    <nav role="navigation" class="breadcrumb" aria-label="breadcrumbs">
     {%- for item in items -%}
         {% if loop.last %}
             {% set item = item|merge({
