--- a/views/pulsar/v2/helpers/flash.html.twig
+++ b/views/pulsar/v2/helpers/flash.html.twig
@@ -16,17 +16,14 @@
 
     <section class="flash flash--{{ options.type|default('default') }}" aria-labelledby="{{ flash_guid }}">
 
-        {%
-            if options.dismissable is not defined or options.dismissable == true
-        %}
-            <button class="close" data-dismiss="flash" tabindex="1">
+        {{ html.icon(icon) }}
+        <h2 id="{{ flash_guid }}">{{ options.message|raw }}</h2>
+
+        {% if options.dismissable is not defined or options.dismissable == true %}
+            <button class="close" data-dismiss="flash">
                 {{ html.icon('remove', { 'label': 'Close' }) }}
             </button>
         {% endif %}
-
-        {{ html.icon(icon) }}
-
-        <h2 id="{{ flash_guid }}">{{ options.message|raw }}</h2>
 
     </section>
 
