Passing label through to select2

--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -1990,7 +1990,7 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
             'parent': options|only('append append_type bare class error error_ids guidance guidance-container help help_id id prepend prepend_type label required show-label'),
             'inputs': [
                 elem.select2(options
-                    |exclude('bare class error guidance guidance-container help label show-label')
+                    |exclude('bare class error guidance guidance-container help show-label')
                 )
             ]
         })
