--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -388,8 +388,12 @@
     color: #999;
 }
 
-.select2-container--default .select2-results__option[aria-selected=true] {
+.select2-container--default .select2-results__option[data-selected=true] {
     background-color: #ddd;
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .select2-container--default .select2-results__option .select2-results__option {
@@ -426,8 +430,12 @@
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-    background-color: #5897fb;
-    color: white;
+    background-color: color(primary);
+    color: color(white);
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .select2-container--default .select2-results__group {
@@ -661,8 +669,8 @@
 }
 
 .select2-container--classic .select2-results__option--highlighted[aria-selected] {
-    background-color: #3875d7;
-    color: white;
+    background-color: color(primary);
+    color: color(white);
 }
 
 .select2-container--classic .select2-results__group {
@@ -698,6 +706,7 @@ span.select2-selection.select2-selection--single {
     background-position: calc(100% - 10px) calc(1em + 5px), calc(100% - 5px) calc(1em + 5px), 100% 0;
     background-size: 5px 5px, 5px 5px, 22px 100%;
     background-repeat: no-repeat;
+    padding-right: 22px;
 
     @include ie-lte(9) {
         background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAFZJREFUOBFjYBgFVA+Bp0AT/xPAT/DZ6gWU/IPHgN9AOQ98BoDkMoAYlytSCWmGyXdhMaQNJkkMzQhUtBLJkGVANkiMJMABVL0PiHcBMTtJOkcVkxYCADK5Iu6w+agDAAAAAElFTkSuQmCC');
