Added selection summary styles

--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -727,4 +727,8 @@ span.select2-selection.select2-selection--single {
 .select2-container--default.select2-container--focus:focus .select2-selection--single {
     @include pulsar-input-focused;
 }
+
+.select2-selections {
+  display: none;
+}
 // scss-lint:enable all
