--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -175,5 +175,5 @@ $fa-css-prefix: 'icon';
 @import 'utility.grid';
 
 // Overrides and fixes
-@import 'override.shame';
+@import 'override.scratch';
 
