Remove reference to themeFile

--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -36,7 +36,7 @@
     <meta name="msapplication-config" content="{{ imgPath }}favicons/cms/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" type="text/css" href="{{ cssPath ~ 'pulsar' ~ themeFile ~ '.css' }}" />
+    <link rel="stylesheet" type="text/css" href="{{ cssPath ~ 'pulsar.css' }}" />
     <link rel="stylesheet" type="text/css" href="{{ cssPath ~ 'lexicon.css' }}" />
 
     <script
