--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -19,6 +19,7 @@
 
     &__body {
         max-height: 20em;
+        overflow-y: auto;
         padding: 10px $padding-base-horizontal;
 
         p,
