Correctly position loading spinner when used next to main search elements
A CMS scratch rule is in place which can be removed when this change gets to product.

Closes #1063

--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -16,6 +16,13 @@
     }
 }
 
+// Set margin and position of loading spinner when directly adjacent to the search button
+.main-search .loading {
+    position: absolute;
+    right: -30px;
+    top: 7px;
+}
+
 input.main-search__field {
     appearance: none;
     background-color: transparent;
