Add new optinonal block container element for loading spinners
Allows the spinner and an optional text string to be centered, any vertical margins should be added through the use of utility classes.

There is an XFP scratch rule in place which can be refactored out when updating to a Pulsar version which contains this PR.

Closes #1060

--- a/stylesheets/_component.loading.scss
+++ b/stylesheets/_component.loading.scss
@@ -120,6 +120,19 @@
     }
 }
 
+.loading-block {
+    text-align: center;
+
+    .loading {
+        display: block;
+        margin: 0 auto;
+    }
+
+    .loading-block__message {
+        display: block;
+        margin-top: $line-height-base / 2;
+    }
+}
 
 .form__group.is-loading {
 
