--- a/views/lexicon/tabs/loading.html.twig
+++ b/views/lexicon/tabs/loading.html.twig
@@ -29,4 +29,12 @@
     }}
     </form>
 
+    <h2 class="heading">Loading block (for centering within modals or tombstone UIs)</h2>
+    <div class="loading-block">
+        {{ html.loading({'class': 'loading--large'}) }}
+        <span class="loading-block__message">Loading content&hellip;</span>
+    </div>
+
+    <br />
+
 {% endblock tab_content %}
