--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1010,6 +1010,8 @@ Option | Type   | Description
 -----  | ------ | --------------------------------------------------------------
 class  | string | CSS classes, space separated
 id     | string | A unique identifier, if required
+message| string | Optional text string to be shown in block style loading elements
+type   | string | `block` or `inline` (default), block will be centered horizontally
 data-* | string | Data attributes, eg: `'data-foo': 'bar'`
 
 #}
@@ -1017,16 +1019,33 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
 {% spaceless %}
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
 
-    <span{{
-        attributes(options
-            |exclude('label')
-            |defaults({
-                'class': 'loading'
-            })
-        )
-    }}>
-        <i>{{- options.label|default('Loading...') -}}</i>
-    </span>
+    {% set type = 'inline' %}
+    {% if options.type is defined and options.type == 'block' %}
+        {% set type = 'block' %}
+    {% endif %}
+
+    {% if type == 'block' %}
+    <div class="loading-block">
+    {% endif %}
+
+        <span{{
+            attributes(options
+                |exclude('label')
+                |defaults({
+                    'class': 'loading'
+                })
+            )
+        }}>
+            <i>{{- options.label|default('Loading...') -}}</i>
+        </span>
+
+    {% if options.message is defined and options.message is not empty %}
+        <span class="loading-block__message">{{ options.message }}</span>
+    {% endif %}
+
+    {% if type == 'block' %}
+    </div>
+    {% endif %}
 
 {% endspaceless %}
 {% endmacro %}
