--- a/stylesheets/_component.breadcrumb.scss
+++ b/stylesheets/_component.breadcrumb.scss
@@ -1,7 +1,6 @@
 .breadcrumb {
     color: color(gray, dark); // must be AA 4.5:1
-    margin-bottom: 11px;
-    font-size: $font-size-small;
+    margin: 0 0 ($line-height-base / 2);
     width: 100%;
 
     a,
