Make flash container sit on left-edge when in mobile/tablet mode

--- a/stylesheets/_component.breadcrumb.scss
+++ b/stylesheets/_component.breadcrumb.scss
@@ -1,6 +1,6 @@
 .breadcrumb {
     color: color(gray, dark); // must be AA 4.5:1
-    margin: 0 0 ($line-height-base / 2);
+    margin: ($line-height-base / 3) 0 ($line-height-base / 2);
     width: 100%;
 
     a,
