--- a/stylesheets/_component.breadcrumb.scss
+++ b/stylesheets/_component.breadcrumb.scss
@@ -2,6 +2,10 @@
     color: color(gray, dark); // must be AA 4.5:1
     margin-bottom: 11px;
 
+    @include respond-min($screen-desktop) {
+        margin-top: 11px;
+    }
+
     a {
         color: color(gray, dark); // must be AA 4.5:1
 
